lib/lang/src/compile/snapshots/lang__compile__type_inference__tests__operation__infer_types_of_equal_operation.snap
---
source: lib/lang/src/compile/type_inference.rs
assertion_line: 1615
expression: "infer_types(&Module::from_definitions_and_type_definitions(vec![TypeDefinition\n                                                                ::\n                                                                new(\"Foo\",\n                                                                    record_type)],\n                                                           vec![VariableDefinition\n                                                                ::\n                                                                new(\"x\",\n                                                                    EqualityOperation\n                                                                    ::\n                                                                    with_type(types\n                                                                              ::\n                                                                              Unknown\n                                                                              ::\n                                                                              new(SourceInformation\n                                                                                  ::\n                                                                                  dummy()),\n                                                                              EqualityOperator\n                                                                              ::\n                                                                              Equal,\n                                                                              RecordConstruction\n                                                                              ::\n                                                                              new(reference_type.clone(),\n                                                                                  Default\n                                                                                  ::\n                                                                                  default(),\n                                                                                  SourceInformation\n                                                                                  ::\n                                                                                  dummy(),),\n                                                                              RecordConstruction\n                                                                              ::\n                                                                              new(reference_type,\n                                                                                  Default\n                                                                                  ::\n                                                                                  default(),\n                                                                                  SourceInformation\n                                                                                  ::\n                                                                                  dummy(),),\n                                                                              SourceInformation\n                                                                              ::\n                                                                              dummy(),),\n                                                                    types ::\n                                                                    Boolean ::\n                                                                    new(SourceInformation\n                                                                        ::\n                                                                        dummy()),\n                                                                    SourceInformation\n                                                                    ::\n                                                                    dummy(),).into()]))"

---
Ok(
    Module {
        path: ModulePath {
            package: Package {
                name: "",
                version: "",
            },
            components: [],
        },
        type_definitions: [
            TypeDefinition {
                name: "Foo",
                type_: Record(
                    Record {
                        name: "Foo",
                        elements: [],
                        source_information: SourceInformation {
                            source_name: "",
                            location: Location {
                                line_number: 0,
                                column_number: 0,
                            },
                            line: "",
                        },
                    },
                ),
            },
        ],
        definitions: [
            VariableDefinition(
                VariableDefinition {
                    name: "x",
                    body: Operation(
                        Equality(
                            EqualityOperation {
                                type_: Reference(
                                    Reference {
                                        name: "Foo",
                                        source_information: SourceInformation {
                                            source_name: "",
                                            location: Location {
                                                line_number: 0,
                                                column_number: 0,
                                            },
                                            line: "",
                                        },
                                    },
                                ),
                                operator: Equal,
                                lhs: RecordConstruction(
                                    RecordConstruction {
                                        type_: Reference(
                                            Reference {
                                                name: "Foo",
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                        elements: {},
                                        source_information: SourceInformation {
                                            source_name: "",
                                            location: Location {
                                                line_number: 0,
                                                column_number: 0,
                                            },
                                            line: "",
                                        },
                                    },
                                ),
                                rhs: RecordConstruction(
                                    RecordConstruction {
                                        type_: Reference(
                                            Reference {
                                                name: "Foo",
                                                source_information: SourceInformation {
                                                    source_name: "",
                                                    location: Location {
                                                        line_number: 0,
                                                        column_number: 0,
                                                    },
                                                    line: "",
                                                },
                                            },
                                        ),
                                        elements: {},
                                        source_information: SourceInformation {
                                            source_name: "",
                                            location: Location {
                                                line_number: 0,
                                                column_number: 0,
                                            },
                                            line: "",
                                        },
                                    },
                                ),
                                source_information: SourceInformation {
                                    source_name: "",
                                    location: Location {
                                        line_number: 0,
                                        column_number: 0,
                                    },
                                    line: "",
                                },
                            },
                        ),
                    ),
                    type_: Boolean(
                        Boolean {
                            source_information: SourceInformation {
                                source_name: "",
                                location: Location {
                                    line_number: 0,
                                    column_number: 0,
                                },
                                line: "",
                            },
                        },
                    ),
                    source_information: SourceInformation {
                        source_name: "",
                        location: Location {
                            line_number: 0,
                            column_number: 0,
                        },
                        line: "",
                    },
                },
            ),
        ],
        export: Export {
            names: {},
        },
        export_foreign: ExportForeign {
            names: {},
        },
        imports: [],
        import_foreigns: [],
    },
)
